[package]
name = "vew"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Visualize lsof output"
repository = "https://github.com/brylee10/lvis"
readme = "README.md"
exclude = [
    "assets/*",
]

[dependencies]
anyhow = "1.0.96"
bytesize = "2.0.1"
clap = { version = "4.5.31", features = ["derive"] }
csv = "1.3.1"
eframe = "0.31.0"
egui = "0.31.0"
egui_extras = "0.31.0"
env_logger = "0.11.6"
log = "0.4.26"
rand = "0.9.0"
rand_distr = "0.5.1"
regex = "1.11.1"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["io-std", "io-util", "macros", "rt", "rt-multi-thread", "sync", "time"] }

